cambies el archivo de history para reflejar el nombre, la edad y la informacion correcta

--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,6 @@
-Esta es la historia de Freddy Vega
+Esta es la historia de Aaron Romero
 
-Freddy Vega tiene 33 años y nació en Colombia, viviendo en todo el mundo
+Aaron Romero tiene 19 años y nació en Colombia, 
+viviendo en el pais por mucho tiempo
 
 Hoy hablaremos de su historia.
