--- a/history.txt
+++ b/history.txt
@@ -3,4 +3,4 @@ Esta es la historia de Aaron Romero
 Aaron Romero tiene 19 años y nació en Colombia, 
 viviendo en el pais por mucho tiempo
 
-Hoy hablaremos de su historia.
+Hoy hablaremos de su vida.
