--- a/history.txt
+++ b/history.txt
@@ -1,6 +1,5 @@
-Esta es la historia de Aaron Romero
+Esta es la historia de Freddy Vega
 
-Aaron Romero tiene 19 años y nació en Colombia, 
-viviendo en el pais por mucho tiempo
+Freddy Vega tiene 33 años y nació en Colombia, viviendo en todo el mundo
 
-Hoy hablaremos de su vida.
+Mañana nos vamos a enfocar en su vida lavoral
