--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,9 @@
 Esta es la historia de Freddy Vega
 
-Freddy Vega tiene 33 años y nació en Colombia, viviendo en todo el mundo
+Freddy Vega tiene 33 años y nació en Colombia
+
+viviendo en todo el mundo
+
+Main 1
 
 Mañana nos vamos a enfocar en su vida lavoral
